--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@testing-library/user-event": "^12.7.3",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-preloader-icon": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.1",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.0"
   },
