--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ag_conexion",
+  "homepage": "http://conexionag.com.ar/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
