--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
-    "react": "^17.0.2",
+    "next": "^13.4.4",
+    "react": "^18.2.0",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-preloader-icon": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
